gs/src/gdevprn.c
@@ -409,11 +409,6 @@ gdev_prn_allocate(gx_device *pdev, gdev_prn_space_params *new_space_params,
 	COPY_PROC(get_color_comp_index);
 	COPY_PROC(encode_color);
 	COPY_PROC(decode_color);
-	COPY_PROC(begin_image);
-	COPY_PROC(text_begin);
-	COPY_PROC(fill_path);
-	COPY_PROC(stroke_path);
-	COPY_PROC(fill_rectangle_hl_color);
 	COPY_PROC(update_spot_equivalent_colors);
 	COPY_PROC(ret_devn_params);
 #undef COPY_PROC
